# CampusCircle

./: .gitignore  CLAUDE.md  Dockerfile  README.md  api.docx  docker-compose.yml  nginx.conf  s -ExecutionPolicy RemoteSigned) ; (& dpython_workCampusCirclebackend.venvScriptsActivate.ps1)  ~$api.docx
backend/: .env  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/business/impl/: admin_service_impl.py  auth_utils.py  club_service_impl.py  comment_service_impl.py  event_service_impl.py  like_service_impl.py  lost_item_service_impl.py  notification_service_impl.py  post_service_impl.py  rank_service_impl.py  user_service_impl.py
backend/app/business/interfaces/: __init__.py  admin_service.py  club_service.py  comment_service.py  event_service.py  like_service.py  lost_item_service.py  notification_service.py  post_service.py  rank_service.py  user_service.py
backend/app/data_access/redis_repo/: blacklist_repo.py  blacklist_repo_impl.py  event_registration_repo.py  event_registration_repo_impl.py  like_repo.py  like_repo_impl.py  lost_item_repo.py  lost_item_repo_impl.py  notification_repo.py  notification_repo_impl.py  rank_repo.py  rank_repo_impl.py
backend/app/data_access/sqlite_dao/: club_dao.py  club_dao_impl.py  club_member_dao.py  club_member_dao_impl.py  (+12 more)
backend/app/infrastructure/: __init__.py  config.py  db.py  exceptions.py  logger.py  redis_client.py  seed_data.py
backend/app/models/: __init__.py  domain.py  dto.py  enums.py
backend/app/presentation/: dependencies.py
backend/tests/: conftest.py  test_smoke.py
(+89 files in other folders)
