[project]
name = "campus_circle"
version = "0.1.0"
description = "校园实时论坛系统 - 基于 FastAPI + Vue3 + TypeScript + SQLite + Redis"
requires-python = ">=3.11"
authors = [
    { name = "CampusCircle Team" },
]
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "fakeredis[lua]>=2.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
